--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/tailwindcss": "^6.14.0",
+    "@pinia/nuxt": "^0.11.1",
     "nuxt": "^3.17.6",
+    "pinia": "^3.0.3",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@tailwindcss/vite": "^4.1.11",
+    "@nuxt/icon": "^1.15.0",
     "@types/node": "^24.0.13",
     "daisyui": "^5.0.46",
     "nuxt-mcp": "^0.2.3",
-    "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3",
     "vue-tsc": "^2.2.12"
   }
