--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "deploy": "gh-pages --dotfiles -d .output/public",
+    "generate-deploy": "npm run generate && npm run deploy"
   },
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.14.0",
@@ -21,6 +23,7 @@
     "@nuxt/icon": "^1.15.0",
     "@types/node": "^24.0.13",
     "daisyui": "^5.0.46",
+    "gh-pages": "^6.3.0",
     "nuxt-mcp": "^0.2.3",
     "typescript": "^5.8.3",
     "vue-tsc": "^2.2.12"
